[package]
name = "amethyst"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/binary",
    "crates/log",
    "crates/raknet"
]

[dependencies]
log = { version = "0.1.0", path = "crates/log" }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"