[workspace]
resolver = "2"
members = [
    "crates/amethyst",
    "crates/amethyst-binary",
    "crates/rakethyst"
]

default-members = ["crates/amethyst"]

[workspace.package]
name = "amethyst"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
