[workspace]
resolver = "2"
members = [
    "crates/amethyst",
    "crates/amethyst-binary",
    "crates/amethyst-log",
    "crates/rakethyst"
]

default-members = ["crates/amethyst"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
log = { version = "0.4.27", features = ["std"]}
chrono = "0.4.40"
rak-rs = { version = "0.3.3", default-features = false, features = [ "async_tokio", "mcpe" ] }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
