[package]
name = "amethyst"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[[bin]]
name = "amethyst"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
log.workspace = true
rak-rs.workspace = true
amethyst-log = { version = "0.1.0", path = "../amethyst-log" }
