[package]
name = "amethyst"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[[bin]]
name = "amethyst"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
log.workspace = true
amethyst-log.workspace = true
amethyst-binary.workspace = true
rakethyst.workspace = true
rand.workspace = true
bytes.workspace = true
hex.workspace = true